# IntentRecognizer

./: CMakeLists.txt  README.md  main.cpp
src/: IntentAnalyzer.cpp  IntentAnalyzer.h  IntentCollection.h
test/: IntentAnalyzer_test.cpp
